--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = None\n",
-    "y = None"
+    "X = boston_features\n",
+    "y = boston.target"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,17 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +101,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.924461630882893\n",
+      "24.761184738556377\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_hat_train = lr.predict(X_train)\n",
+    "y_hat_test = lr.predict(X_test)\n",
+    "res_train = y_hat_train - y_train\n",
+    "res_test = y_hat_test - y_test\n",
+    "mse_train = np.mean(res_train**2)\n",
+    "mse_test = np.mean(res_test**2)\n",
+    "print(mse_train)\n",
+    "print(mse_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,14 +188,432 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4]\n",
+    "np.random.seed(1111)\n",
+    "\n",
+    "def shoofly():\n",
+    "    np.random.shuffle(nums)\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bos_test = boston_features.sample(frac=1).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRIM</th>\n",
+       "      <th>ZN</th>\n",
+       "      <th>INDUS</th>\n",
+       "      <th>CHAS</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>RM</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DIS</th>\n",
+       "      <th>RAD</th>\n",
+       "      <th>TAX</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>B</th>\n",
+       "      <th>LSTAT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>6.575</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>0.542096</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>296.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.275260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.02731</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>6.421</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>0.623954</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.263711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.02729</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>7.185</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>0.623954</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>0.989737</td>\n",
+       "      <td>-1.627858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.03237</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>6.998</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>0.707895</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>0.994276</td>\n",
+       "      <td>-2.153192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.06905</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>7.147</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>0.707895</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.162114</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE       DIS  RAD    TAX  \\\n",
+       "0  0.00632  18.0   2.31   0.0  0.538  6.575  65.2  0.542096  1.0  296.0   \n",
+       "1  0.02731   0.0   7.07   0.0  0.469  6.421  78.9  0.623954  2.0  242.0   \n",
+       "2  0.02729   0.0   7.07   0.0  0.469  7.185  61.1  0.623954  2.0  242.0   \n",
+       "3  0.03237   0.0   2.18   0.0  0.458  6.998  45.8  0.707895  3.0  222.0   \n",
+       "4  0.06905   0.0   2.18   0.0  0.458  7.147  54.2  0.707895  3.0  222.0   \n",
+       "\n",
+       "   PTRATIO         B     LSTAT  \n",
+       "0     15.3  1.000000 -1.275260  \n",
+       "1     17.8  1.000000 -0.263711  \n",
+       "2     17.8  0.989737 -1.627858  \n",
+       "3     18.7  0.994276 -2.153192  \n",
+       "4     18.7  1.000000 -1.162114  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_features.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRIM</th>\n",
+       "      <th>ZN</th>\n",
+       "      <th>INDUS</th>\n",
+       "      <th>CHAS</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>RM</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DIS</th>\n",
+       "      <th>RAD</th>\n",
+       "      <th>TAX</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>B</th>\n",
+       "      <th>LSTAT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.53700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.504</td>\n",
+       "      <td>5.981</td>\n",
+       "      <td>68.1</td>\n",
+       "      <td>0.496618</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>0.953225</td>\n",
+       "      <td>0.140499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.26169</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.544</td>\n",
+       "      <td>6.023</td>\n",
+       "      <td>90.4</td>\n",
+       "      <td>0.387535</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>0.998487</td>\n",
+       "      <td>0.150478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.44668</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.58</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.871</td>\n",
+       "      <td>5.272</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>0.181144</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>403.0</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>0.222679</td>\n",
+       "      <td>0.683554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.55778</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>21.89</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.624</td>\n",
+       "      <td>6.335</td>\n",
+       "      <td>98.2</td>\n",
+       "      <td>0.263387</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>437.0</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>0.994377</td>\n",
+       "      <td>0.766108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.52058</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.507</td>\n",
+       "      <td>6.631</td>\n",
+       "      <td>76.5</td>\n",
+       "      <td>0.548029</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>0.978693</td>\n",
+       "      <td>-0.192357</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CRIM   ZN  INDUS  CHAS    NOX     RM   AGE       DIS  RAD    TAX  \\\n",
+       "0  0.53700  0.0   6.20   0.0  0.504  5.981  68.1  0.496618  8.0  307.0   \n",
+       "1  0.26169  0.0   9.90   0.0  0.544  6.023  90.4  0.387535  4.0  304.0   \n",
+       "2  2.44668  0.0  19.58   0.0  0.871  5.272  94.0  0.181144  5.0  403.0   \n",
+       "3  0.55778  0.0  21.89   0.0  0.624  6.335  98.2  0.263387  4.0  437.0   \n",
+       "4  0.52058  0.0   6.20   1.0  0.507  6.631  76.5  0.548029  8.0  307.0   \n",
+       "\n",
+       "   PTRATIO         B     LSTAT  \n",
+       "0     17.4  0.953225  0.140499  \n",
+       "1     18.4  0.998487  0.150478  \n",
+       "2     14.7  0.222679  0.683554  \n",
+       "3     21.2  0.994377  0.766108  \n",
+       "4     17.4  0.978693 -0.192357  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bos_test.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(1112)\n",
+    "\n",
     "def kfolds(data, k):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data = dataframe to be partitioned out into folds\n",
+    "    k = number of folds\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list of dataframes of the folds\n",
+    "    \"\"\"\n",
+    "    \n",
     "    # Force data as pandas dataframe\n",
-    "    # add 1 to fold size to account for leftovers           \n",
-    "    return None"
+    "    data = pd.DataFrame(data).copy()\n",
+    "    data = data.sample(frac=1).reset_index(drop=True)\n",
+    "    \n",
+    "    # add 1 to fold size to account for leftovers  \n",
+    "    \n",
+    "    # what is length of dataframe\n",
+    "    length = data.shape[0]    \n",
+    "      \n",
+    "    size_prelim = int(length/k)\n",
+    "    remainder = length % k\n",
+    "    \n",
+    "    curr_len = 0\n",
+    "    \n",
+    "    list_of_folds = []\n",
+    "    \n",
+    "    # Allocate all the folds that will pick up single remainders\n",
+    "    for n in range(remainder):\n",
+    "        list_of_folds.append(data.iloc[curr_len : curr_len + size_prelim + 1])\n",
+    "        curr_len += size_prelim + 1    \n",
+    "    \n",
+    "    # Then do the rest of the folds that don't need remainders\n",
+    "    for n in range(k-remainder):\n",
+    "        list_of_folds.append(data.iloc[curr_len : curr_len + size_prelim])\n",
+    "        curr_len += size_prelim  \n",
+    "\n",
+    "    return list_of_folds\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(51, 13)\n",
+      "(51, 13)\n",
+      "(51, 13)\n",
+      "(51, 13)\n",
+      "(51, 13)\n",
+      "(51, 13)\n",
+      "(50, 13)\n",
+      "(50, 13)\n",
+      "(50, 13)\n",
+      "(50, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(232)\n",
+    "\n",
+    "# Testing\n",
+    "list_dfs = kfolds(boston_features, 10)\n",
+    "\n",
+    "for df in list_dfs:\n",
+    "    print(df.shape)"
    ]
   },
   {
@@ -170,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,10 +634,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folds_train = kfolds(boston_features,5)\n",
+    "folds_test = kfolds(boston.target,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(102, 13) (102, 1)\n",
+      "(101, 13) (101, 1)\n",
+      "(101, 13) (101, 1)\n",
+      "(101, 13) (101, 1)\n",
+      "(101, 13) (101, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confirm folds are consistent in size\n",
+    "for fold_train, fold_test in zip(folds_train,folds_test):\n",
+    "    print(fold_train.shape, fold_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same size! so good to go."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,24 +688,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy as np\n",
+    "\n",
     "test_errs = []\n",
     "train_errs = []\n",
     "k=5\n",
     "\n",
     "for n in range(k):\n",
     "    # Split in train and test for the fold\n",
-    "    train = None\n",
-    "    test = None\n",
+    "    X_train =  pd.concat(folds_train[:n] + folds_train[n+1:],axis=0)\n",
+    "    X_test = folds_train[n]\n",
+    "    \n",
+    "    y_train = pd.concat(folds_test[:n] + folds_test[n+1:],axis=0)\n",
+    "    y_test = folds_test[n]\n",
+    "    \n",
     "    # Fit a linear regression model\n",
+    "#     print(train.shape)\n",
+    "#     print(test.shape)\n",
+    " \n",
+    "    lr.fit(X_train,y_train)\n",
+    "    \n",
+    "    y_hat_train = lr.predict(X_train)\n",
+    "    y_hat_test = lr.predict(X_test)\n",
     "    \n",
     "    #Evaluate Train and Test Errors\n",
-    "\n",
+    "    res_train = y_hat_train - y_train\n",
+    "    res_test = y_hat_test - y_test\n",
+    "    \n",
+    "    train_errs.append(np.mean(res_train**2))\n",
+    "    test_errs.append(np.mean(res_test**2))\n",
+    "    \n",
     "# print(train_errs)\n",
     "# print(test_errs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83.1475531540381"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(train_errs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89.2714551252104"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(test_errs)"
    ]
   },
   {
@@ -286,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
