--- a/index.ipynb
+++ b/index.ipynb
@@ -786,6 +786,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cv_5_results = np.mean(cross_val_score(linreg, X, y, cv=5, scoring=\"neg_mean_squared_error\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
