--- a/index.ipynb
+++ b/index.ipynb
@@ -798,7 +798,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import mean_"
+   ]
   },
   {
    "cell_type": "markdown",
