--- a/index.ipynb
+++ b/index.ipynb
@@ -799,7 +799,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import cr"
    ]
   },
   {
