--- a/index.ipynb
+++ b/index.ipynb
@@ -800,7 +800,9 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import cr"
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cv_10"
    ]
   },
   {
