Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -730,7 +730,8 @@
     "    # Fit a linear regression model\n",
     "#     print(train.shape)\n",
     "#     print(test.shape)\n",
-    " \n",
+    "     \n",
+    "    lr = Linear_Re\n",
     "    lr.fit(X_train,y_train)\n",
     "    \n",
     "    y_hat_train = lr.predict(X_train)\n",
