--- a/index.ipynb
+++ b/index.ipynb
@@ -467,7 +467,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "lr = Line\n",
+    "lr = LinearRegression()\n",
     "cv_10 = np.mean(cross_val_score())"
    ]
   },
