Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "lr = LinearRegression()\n",
-    "cv_10 = np.mean(cross_val_score(lr, X_train))"
+    "cv_10 = np.mean(cross_val_score(lr, boston_features,boston.ta))"
    ]
   },
   {
